capitalize all Machine Learning appearences

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -266,10 +266,10 @@ For space reasons, we don't provide here more specific visualizations and analys
 
 \section{Data Features}
 
-The quality of any machine learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as relevant as possible to the task.
+The quality of any Machine Learning task on CDRs relies heavily on the ability to characterize the users and their communication patterns, in ways that are as relevant as possible to the task.
 In general, the features constructed reflect calling and mobility patterns, segmented by different time periods during the week, and tagging whether the actions or subjects are `endemic'.
 
-Our goal in building a machine learning model is to evaluate and analyze if long-term migrations can be accurately predicted from the CDR data.
+Our goal in building a Machine Learning model is to evaluate and analyze if long-term migrations can be accurately predicted from the CDR data.
 Added to this, we would like to know what type of information extracted from the data has most predictive power to our problem's variable.
 This result would tell us which data features are informative in detecting migrations, which in turn, would test the assumption on which we build the risk maps in \cref{section:riskmaps}.
 The CDR logs available for Argentina span a period of 5 months, whereas the Mexican dataset includes 24 months, from January 2014 to December 2015, making it more suitable for this study.
