--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -76,8 +76,8 @@ We have no reason to believe that this dataset can provide such information with
 Machine learning is a sub-field of computer science with broad \textit{theoretical} intersections with statistics and mathematical optimization.
 At present time, it has a wide range of applications.
 A non-comprehensive list of its uses includes self-driving cars, Spam detection systems, face and voice recognition, temperature prediction in weather, AI opponents in games, disease detection in patients, text and audio language translation, stock pricing, movie recommendation systems, etc.
-Examples of these machine learning programs are now widespread to the point where their use today has a direct impact on the daily lives of millions of people.
-Due to this, machine learning has \textit{practical} intersections with data and software engineering.
+Examples of these Machine Learning programs are now widespread to the point where their use today has a direct impact on the daily lives of millions of people.
+Due to this, Machine Learning has \textit{practical} intersections with data and software engineering.
 
 
 \citep{Mitchell-MLearning} gives the following definition of Machine Learning:
