--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -228,7 +228,7 @@ A more detailed explanation based on the works of~\citep{james-biasVarianceGener
 
 \subsection{Case of overfitting}\label{subsection-overfitting}
 
-For any given machine learning learner, we can have different combinations of high or low variance and biases.
+For any given Machine Learning learner, we can have different combinations of high or low variance and biases.
 With these four possible model performances cases, we will need to work out the data and tune the model to lower both errors.
 
 For each combination of bias and variance stages, there are different strategies to improve a model.
@@ -296,14 +296,14 @@ It also gives a formal argument in favor of finding models whose scores are not 
 \section{ Using the Vapnik-Chervonenkis (VC) Dimension for prediction error estimation}\label{section-VcDimension}
 
 In Vapnik and Chervonenkis' work, the focus is put on the estimation of the prediction error through the convergence and consistency of the training error.
-To do this, the authors build a measure, the Vapnik-Chervonenkis (VC) dimension, as an important value in determining convergence speeds for different machine learning algorithms.
+To do this, the authors build a measure, the Vapnik-Chervonenkis (VC) dimension, as an important value in determining convergence speeds for different Machine Learning algorithms.
 All of this theory is given in the context of functional spaces.
 
 The VC Dimension is a number based on what is called \textit{Statistical Learning Theory} (SLT).
 The theory is used to bound estimates the true expected prediction error from finite i.i.d.\ samples.
 Its advantage is that it requires weak assumptions from the data and the structure of the model, and the results are distribution independent.
 
-Here we provide only a mention of VC dimension for the purpose of showing a theoretical approach to error estimation in machine learning methods.
+Here we provide only a mention of VC dimension for the purpose of showing a theoretical approach to error estimation in Machine Learning methods.
 Most of the results and reasoning follows the works in \citep{cherkassky-learning2007}.
 For a more broad development of this work, \citep{vapnik-nature2000} is recommended too.
 Here we present a brief comment on the consistency of the training error with respect to the prediction error and give example bounds for classification learners.
@@ -311,7 +311,7 @@ Here we present a brief comment on the consistency of the training error with re
 
 Vapnik-Chervonenkis discuss a theoretical framework based on the dimensions in a way which effectively lets it be constructed.
 Analytic bounds given to estimate the distance between the empirical and generalization errors.
-This is done for a number of known machine learning algorithms and the theory also provides methods to calculate these dimensions in a constructive way and for a broad class of functions.
+This is done for a number of known Machine Learning algorithms and the theory also provides methods to calculate these dimensions in a constructive way and for a broad class of functions.
 For cases in VC dimensions can not be calculated, authors propose sampling or experimental methods to bound it.
 
 %since it effectively provides a tractable method to
