--- a/ch_results.tex
+++ b/ch_results.tex
@@ -19,7 +19,7 @@ The overall picture of this work shows that there is evidence to confirm the hyp
 \chapter{Summary of Results}\label{ch:results}
 
 % handling data, models and features with acumen
-% After extensive research of machine learning literature and CDR usage in health problems.
+% After extensive research of Machine Learning literature and CDR usage in health problems.
 
 % A summary of the work done we can say we have discussed issues on the most of the following items:
 
@@ -90,11 +90,11 @@ In \cref{ch:machineLearning,ch:modelSelection} we gave a practical introduction 
 This helped us set our Chagas problem inside a systematic process to analyze long-term migrations with the CDR dataset.
 
 To do this, we broke the problem of long-term human migrations down to four tasks which were later analyzed through different classifiers.
-In these two chapters, we introduced the machine learning theory necessary to structure our problem, along with its methods to solve them.
+In these two chapters, we introduced the Machine Learning theory necessary to structure our problem, along with its methods to solve them.
 These models were some of the most common techniques found in the literature for the task we were trying to solve.
 
 To start off we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
-Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the machine learning frame.
+Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the Machine Learning frame.
 This concept was introduced along with the notion of model hyperparameters.
 Both were relevant to subsequent sections and in particular to \cref{fig:log_loss_regularization_validation_curve}.
 There we showed that there is importance in model regularization by fitting a Logistic Regression classifier and comparing how its logloss varies across different regularization values.
@@ -543,7 +543,7 @@ On the other end of the spectrum, we had that the Naive Bayes model had the wors
 And the next best metric was a maximum $ROC AUC$ of $76\%$ for the case of tagging migrants that moved out of the endemic region, but only making predictions over users that are non-endemic in $T_1$.
 These results show that we also had acceptable rates for a model that is not expected to perform.
 
-Overall we found that there are discrepancy in the evaluation scores across the machine learning models here analyzed.
+Overall we found that there are discrepancy in the evaluation scores across the Machine Learning models here analyzed.
 Some are better at capturing the relevant information to predict human movements in the long-term.
 This is because not all social information is presented directly in the dataset, and feature interactions are helpful.
 
