stop using To Start Off

--- a/ch_descriptions_risk.tex
+++ b/ch_descriptions_risk.tex
@@ -279,7 +279,7 @@ $T_0$, from January 2014 to July 2015, considered as the ``past'' in our experim
 Our dataset will only run from August 2015 to December 2015 (period $T_1$), where all CDRs are processed to extract information by user and by link.
 This is done because we can't introduce data from $T_0$ for a model trying to predict this same information.
 
-To start off building attributes from the data, each week is divided into time periods:
+To begin building attributes from the data, each week is divided into time periods:
 \begin{definition}\label{def:week-periods}
 	(i) the period \textit{weekday} is from Monday to Friday, on working hours (from 8hs to 20hs); (ii) \textit{weeknight} is from Monday to Friday, between 20hs and 8hs of the following day;
 	and (iii) \textit{weekend} is Saturday and Sunday.
