--- a/ch_results.tex
+++ b/ch_results.tex
@@ -93,7 +93,7 @@ To do this, we broke the problem of long-term human migrations down to four task
 In these two chapters, we introduced the Machine Learning theory necessary to structure our problem, along with its methods to solve them.
 These models were some of the most common techniques found in the literature for the task we were trying to solve.
 
-To start off we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
+To begin we considered the Logistic Regression Classifier along with the logloss metric to evaluate model performance.
 Taking to our advantage the model's more tractable formulation, we showed how model regularization fits inside the Machine Learning frame.
 This concept was introduced along with the notion of model hyperparameters.
 Both were relevant to subsequent sections and in particular to \cref{fig:log_loss_regularization_validation_curve}.
